beginning pagination refactoring, addressing spacing issue bug

--- a/src/app.scss
+++ b/src/app.scss
@@ -494,57 +494,85 @@ SLIDER
   }
 }
 
-.slider-pagi {
-  border: 1px solid pink;
+.slider-pagi-wrapper {
   position: absolute;
-  z-index: 3;
+  border: 1px solid pink;
+  width: 100%;
+  height: 25px;
   margin: 0px auto;
+  padding: 0px;
   text-align: center;
-  width: auto;
   bottom: 20px;
-  transform: translateX(-50%);
-  font-size: 0;
+  z-index: 3;
+}
+.slider-pagi-wtf {
+  border: 1px solid yellow;
+  display: block;
+  position: relative;
+  height: 100%;
+  width: auto;
+  top:0;
+  left:0;
   list-style-type: none;
+
+  &__elem {
+    display: inline-block;
+    border: 1px solid deeppink;
+    height: 16px;
+    width: 64px;
+    border-radius: 12%;
+    color: $color2;
+  }
+}
+
+.slider-pagi {
+  border: 1px solid yellow;
+  position: absolute;
+  display: inline-block;
+  height: 100%;
+  width: auto;
+  text-align: center;
+  list-style-type: none;
+  overflow: hidden;
+  z-index: 3;
+  float: none;
+  // transform: translateX(-50%);
 
   &:active:before, &:hover:before {
   }
 
   &__elem {
     border: 1px solid $color2;
-    position: relative;
+    // position: relative;
     display: inline-block;
-    vertical-align: top;
     width: 64px;
-    height: 3px;
-    // height: 0.12rem;
+    // height: 3px;
+    height: 0.12rem;
     margin: 0 0.25rem;
     border-radius: 12%;
     color: $color2;
     cursor: pointer;
-    overflow: visible;
+    // overflow: visible;
     
-    &:before {
-      content: "";
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      width: 100%;
-      height: 100%;
-      background: #333;
-      border-radius: 12%;
-      transition: transform 0.3s;
-      transform: translate(-50%, -50%) scale(0);
-    }
+    // &:before {
+    //   content: "";
+    //   width: 100%;
+    //   height: 100%;
+    //   background: #333;
+    //   border-radius: 12%;
+    //   transition: transform 0.3s;
+    //   transform: translate(-50%, -50%) scale(0);
+    // }
     
-    &.active:before,
-    &:hover:before {
-      transform: translate(-50%, -50%) scale(1);
-    }
+    // &.active:before,
+    // &:hover:before {
+    //   transform: translate(-50%, -50%) scale(1);
+    // }
 
-    &.active {
-      // border: 2px solid $color2;
-      cursor: auto;
-    }
+    // &.active {
+    //   // border: 2px solid $color2;
+    //   cursor: auto;
+    // }
 
     .progressBar {
       width: 100%;
@@ -556,8 +584,7 @@ SLIDER
     .progressBar div {
       height: 100%;
       color: #fff;
-      text-align: right;
-      // line-height: 22px; /* same as #progressBar height if we want text middle aligned */
+      line-height: 3px; /* same as #progressBar height if we want text middle aligned */
       width: 0;
       background-color: #00ff00;
     }
